--- a/src/feedback.css
+++ b/src/feedback.css
@@ -93,6 +93,9 @@
 #feedback-welcome-error,
 #feedback-overview-error {
   display: none;
+  padding: 0px 15px 0px;
+  background: #ff000029;
+  border-radius: 3px;
   color: #f13e3e;
   float: right;
   margin-right: 30px;
@@ -107,13 +110,9 @@
   position: fixed;
   width: 80%!important;
   max-width: 540px;
-  //height: 275px;
 }
 #feedback-overview {
   display: none;
-  //top: 10%;
-  //left: 50%;
-  //margin-left: -420px;
   position: fixed;
   width: 80%!important;
   max-width: 840px!important;
@@ -123,8 +122,6 @@
 #feedback-submit-loading,
 #feedback-submit-success {
   top: 30%;
-  //left: 50%;
-  //margin-left: -300px;
   display: block;
   position: fixed;
   max-width: 600px;
@@ -250,22 +247,6 @@
   height: 16px;
   margin-top: 7px;
   float: left;
-}
-.feedback-sethighlight:hover,
-.feedback-setblackout:hover {
-  /*
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
-  box-shadow: none;
-  background-color: #f8f8f8;
-  background-image: -webkit-linear-gradient(top,#f8f8f8,#f1f1f1);
-  background-image: -moz-linear-gradient(top,#f8f8f8,#f1f1f1);
-  background-image: -ms-linear-gradient(top,#f8f8f8,#f1f1f1);
-  background-image: -o-linear-gradient(top,#f8f8f8,#f1f1f1);
-  background-image: linear-gradient(top,#f8f8f8,#f1f1f1);
-  border: 1px solid #c6c6c6;
-  color: #333;
-  */
 }
 .feedback-active {
   -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
