--- a/src/feedback.css
+++ b/src/feedback.css
@@ -5,17 +5,21 @@
   right: 60px;
   width: auto;
 }
-#feedback-module p {  font-size: 13px }
+#feedback-module p {
+  font-size: 13px;
+}
 #feedback-note-tmp {
   width: 444px;
   height: auto;
   min-height: 90px;
   outline: none;
-  font-family: Arial,sans-serif;
+  font-family: Arial, sans-serif;
   padding: 4px;
 }
 #feedback-note-tmp:focus,
-#feedback-overview-note:focus {  border: 1px solid #64b7cc }
+#feedback-overview-note:focus {
+  border: 1px solid #64b7cc;
+}
 #feedback-canvas {
   position: absolute;
   top: 0;
@@ -28,11 +32,11 @@
   display: block;
   position: fixed;
 }
-.feedback-logo {  
+.feedback-logo {
   margin-bottom: 16px;
   font-size: 18px;
-  font-weight: Bold;  
-  border-bottom: 1px solid rgba(0,0,0,.1);
+  font-weight: Bold;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 .feedback-next-btn {
   width: 72px;
@@ -68,10 +72,12 @@
   padding: 0 8px;
 }
 .feedback-helper {
-  background: rgba(0,0,0,0);
+  background: rgba(0, 0, 0, 0);
   cursor: default;
 }
-.feedback-helper[data-type="highlight"]>.feedback-helper-inner {  background: rgba(0,68,255,0.1) }
+.feedback-helper[data-type='highlight'] > .feedback-helper-inner {
+  background: rgba(0, 68, 255, 0.1);
+}
 #feedback-close {
   cursor: pointer;
   position: absolute;
@@ -89,9 +95,12 @@
   height: 30px;
   opacity: 0.65;
 }
-.feedback-wizard-close:hover {  opacity: 1 }
+.feedback-wizard-close:hover {
+  opacity: 1;
+}
 #feedback-welcome-error,
-#feedback-overview-error {
+#feedback-overview-error,
+#feedback-only-overview-error {
   display: none;
   padding: 0px 15px 0px;
   background: #ff000029;
@@ -102,20 +111,23 @@
   font-size: 13px;
   line-height: 29px;
 }
-#feedback-overview-error {  margin-top: 20px }
+#feedback-overview-error,
+#feedback-only-overview-error {
+  margin-top: 20px;
+}
 #feedback-highlighter {
   display: none;
   bottom: 100px;
   right: 100px;
   position: fixed;
-  width: 80%!important;
+  width: 80% !important;
   max-width: 540px;
 }
 #feedback-overview {
   display: none;
   position: fixed;
-  width: 80%!important;
-  max-width: 840px!important;
+  width: 80% !important;
+  max-width: 840px !important;
   height: auto;
 }
 #feedback-submit-error,
@@ -132,9 +144,9 @@
   padding: 10px;
   outline: 0;
   background-clip: padding-box;
-  -webkit-box-shadow: 0 4px 16px rgba(0,0,0,.2);
-  -moz-box-shadow: 0 4px 16px rgba(0,0,0,.2);
-  box-shadow: 0 4px 16px rgba(0,0,0,.2);
+  -webkit-box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
   z-index: 40000;
 }
 .feedback-btn-gray {
@@ -142,7 +154,7 @@
   cursor: pointer;
   font-family: 'Open sans';
   border: 1px solid #dcdcdc;
-  border: 1px solid rgba(0,0,0,0.1);
+  border: 1px solid rgba(0, 0, 0, 0.1);
   color: white;
   border-radius: 5px;
   background-color: #2a2a2a;
@@ -151,11 +163,11 @@
   color: #333;
   border: 1px solid #c6c6c6;
   background-color: #f8f8f8;
-  background-image: -webkit-linear-gradient(top,#f8f8f8,#f1f1f1);
-  background-image: -moz-linear-gradient(top,#f8f8f8,#f1f1f1);
-  background-image: -ms-linear-gradient(top,#f8f8f8,#f1f1f1);
-  background-image: -o-linear-gradient(top,#f8f8f8,#f1f1f1);
-  background-image: linear-gradient(top,#f8f8f8,#f1f1f1);
+  background-image: -webkit-linear-gradient(top, #f8f8f8, #f1f1f1);
+  background-image: -moz-linear-gradient(top, #f8f8f8, #f1f1f1);
+  background-image: -ms-linear-gradient(top, #f8f8f8, #f1f1f1);
+  background-image: -o-linear-gradient(top, #f8f8f8, #f1f1f1);
+  background-image: linear-gradient(top, #f8f8f8, #f1f1f1);
 }
 .feedback-btn-blue {
   text-align: center;
@@ -163,35 +175,37 @@
   font-family: 'Open sans';
   border-radius: 5px;
   background-color: #357ae8;
-  background-image: -webkit-linear-gradient(top,#4d90fe,#357ae8);
-  background-image: -moz-linear-gradient(top,#4d90fe,#357ae8);
-  background-image: -ms-linear-gradient(top,#4d90fe,#357ae8);
-  background-image: -o-linear-gradient(top,#4d90fe,#357ae8);
-  background-image: linear-gradient(top,#4d90fe,#357ae8);
+  background-image: -webkit-linear-gradient(top, #4d90fe, #357ae8);
+  background-image: -moz-linear-gradient(top, #4d90fe, #357ae8);
+  background-image: -ms-linear-gradient(top, #4d90fe, #357ae8);
+  background-image: -o-linear-gradient(top, #4d90fe, #357ae8);
+  background-image: linear-gradient(top, #4d90fe, #357ae8);
   border: 1px solid #2f5bb7;
   color: #fff;
 }
 #feedback-note-tmp,
-#feedback-overview-note {  resize: none }
+#feedback-overview-note {
+  resize: none;
+}
 #feedback-welcome,
 #feedback-highlighter,
 #feedback-overview,
 #feedback-submit-success,
 #feedback-submit-loading,
 #feedback-submit-error {
-  font-family: Arial,sans-serif;
+  font-family: Arial, sans-serif;
   z-index: 40000;
   background: #fff;
   border-radius: 5px;
-  border: 1px solid rgba(0,0,0,.333);
+  border: 1px solid rgba(0, 0, 0, 0.333);
   padding: 30px 42px;
   max-width: 540px;
   width: 80%;
-  border: 1px solid rgba(0,0,0,.333);
+  border: 1px solid rgba(0, 0, 0, 0.333);
   outline: 0;
-  -webkit-box-shadow: 0 4px 16px rgba(0,0,0,.2);
-  -moz-box-shadow: 0 4px 16px rgba(0,0,0,.2);
-  box-shadow: 0 4px 16px rgba(0,0,0,.2);
+  -webkit-box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
   background: #fff;
   background-clip: padding-box;
   box-sizing: border-box;
@@ -205,14 +219,14 @@
   -moz-box-shadow: none;
   box-shadow: none;
   background-color: #f5f5f5;
-  background-image: -webkit-linear-gradient(top,#f5f5f5,#f1f1f1);
-  background-image: -moz-linear-gradient(top,#f5f5f5,#f1f1f1);
-  background-image: -ms-linear-gradient(top,#f5f5f5,#f1f1f1);
-  background-image: -o-linear-gradient(top,#f5f5f5,#f1f1f1);
-  background-image: linear-gradient(top,#f5f5f5,#f1f1f1);
+  background-image: -webkit-linear-gradient(top, #f5f5f5, #f1f1f1);
+  background-image: -moz-linear-gradient(top, #f5f5f5, #f1f1f1);
+  background-image: -ms-linear-gradient(top, #f5f5f5, #f1f1f1);
+  background-image: -o-linear-gradient(top, #f5f5f5, #f1f1f1);
+  background-image: linear-gradient(top, #f5f5f5, #f1f1f1);
   color: #444;
   border: 1px solid #dcdcdc;
-  border: 1px solid rgba(0,0,0,0.1);
+  border: 1px solid rgba(0, 0, 0, 0.1);
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
   border-radius: 2px;
@@ -249,15 +263,15 @@
   float: left;
 }
 .feedback-active {
-  -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
-  -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
-  box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
+  -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
   background-color: #eee;
-  background-image: -webkit-linear-gradient(top,#eee,#e0e0e0);
-  background-image: -moz-linear-gradient(top,#eee,#e0e0e0);
-  background-image: -ms-linear-gradient(top,#eee,#e0e0e0);
-  background-image: -o-linear-gradient(top,#eee,#e0e0e0);
-  background-image: linear-gradient(top,#eee,#e0e0e0);
+  background-image: -webkit-linear-gradient(top, #eee, #e0e0e0);
+  background-image: -moz-linear-gradient(top, #eee, #e0e0e0);
+  background-image: -ms-linear-gradient(top, #eee, #e0e0e0);
+  background-image: -o-linear-gradient(top, #eee, #e0e0e0);
+  background-image: linear-gradient(top, #eee, #e0e0e0);
   border: 1px solid #ccc;
   color: #333;
 }
@@ -269,18 +283,20 @@
   font-weight: normal;
 }
 
-@media (max-width: 500px){
+@media (max-width: 500px) {
   #feedback-highlighter {
-    height: 450px;
+    height: 370px;
   }
   #feedback-overview {
-    height: 530px;
+    height: 580px;
   }
   #feedback-overview-note {
     width: 210px;
   }
 }
-#feedback-highlighter label.lower {  margin-top: 10px }
+#feedback-highlighter label.lower {
+  margin-top: 10px;
+}
 .feedback-buttons {
   float: right;
   margin-top: 20px;
@@ -300,10 +316,14 @@
   width: 240px;
   padding: 5px;
   border-radius: 5px;
-  border: 1px solid #adadad
+  border: 1px solid #adadad;
 }
-.feedback-additional {  margin-bottom: 20px!important }
-#feedback-overview-description {  float: left }
+.feedback-additional {
+  margin-bottom: 20px !important;
+}
+#feedback-overview-description {
+  float: left;
+}
 #feedback-overview-note {
   width: 240px;
   height: 200px;
@@ -311,10 +331,12 @@
   border-radius: 5px;
   height: 90px;
   outline: none;
-  font-family: Arial,sans-serif;
+  font-family: Arial, sans-serif;
   border: 1px solid #adadad;
 }
-#feedback-overview-screenshot {  float: right }
+#feedback-overview-screenshot {
+  float: right;
+}
 .feedback-screenshot {
   max-width: 396px;
   padding: 1px;
